[tool.poetry]
name = "aiotasks"
version = "0.0.1"
description = "Task manager for Asyncio"
authors = ["Vasilii Bliznetcov <hound672@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.720.0"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^2.6.1"
factory-boy = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
